# multivariate_polynomial

./: .gitignore  CMakeLists.txt  OBSERVATION.MD  README.MD  TODO.MD  TODO.md  a.out  a_asan.out  a_g.out  a_o0.out  a_sanitized.out  a_ubsan.out  chec_det.m  main.cpp  mult_test.cpp  package-lock.json  run_tests.sh  test.cpp  test.sh  test_array  test_gsl.sh
.cache/clangd/index/: LinAlgb.cpp.37CA4B84D91307BB.idx  Methods.cpp.9BE0C4901309CB14.idx  Multivariate.cpp.91B3C01589A2C1D8.idx  Numerical.cpp.3F759377B123131C.idx  Univariate.cpp.650125C5A27E5FEB.idx  linalg.h.B51EEEF3A020ED18.idx  mult.cpp.A38E6B10942B15D2.idx  poly1.cpp.B73C66462807DDCD.idx  poly2.cpp.FD8D06B074C734CD.idx  polygraph.h.F8B885F4718FF58F.idx  polynomial.h.0F076528B8BAD9D5.idx  test_case_2.cpp.81A6870E148D13B0.idx  utils.cpp.20E8FDC89E09AF6D.idx  utils.h.4E5991E05A38F796.idx
OLD/: OLD_TODO.MD
OLD/src/: IOhandler.h  linalg.h  matrix.cpp  matrix.h  parser.cpp  parser.h
OLD/tests/: particle_mult.cpp
documentation/: MULTPOLYNOM_USAGE.md  TODO.md
old_src/: atom.cpp  linalg.cpp  main.cpp  module.h  particle.cpp  polynomial.cpp  polynomial.h
src/: DCEI.cpp  IOhandler.h  LinAlgb.cpp  Methods.cpp  Multivariate.cpp  Numerical.cpp  PolyGraph.cpp  Univariate.cpp  atom.h  linalg.h  matrix.h  module.hpp  parser.h  particle.h  polygraph.h  polynomial.h  utils.cpp  utils.h
test/: eqns.txt  mult.cpp  ppoly1.txt  ppoly2.txt  revppoly1.txt  revppoly2.txt  sylvester.cpp  test_case.cpp  test_case_2.cpp  test_det.m  test_gsl.cpp  test_sylvester.m
test/submition/: coeffs.hpp  graph.cpp  source.cpp
test/texts/: coeff1.txt  coeff2.txt  poly1.cpp  poly2.cpp  power1.txt  power2.txt
tests/: array2polynom.cpp  atom.cpp  determinant.cpp  particle.cpp  particle_add.cpp  particle_div.cpp  particle_mult.cpp  polynom.cpp  polynom_div.cpp  polynomial_test.cpp  test_array  todo.md
wiki/multivariate-polynomial/: sources.md  wiki.config.md
wiki/multivariate-polynomial/logs/: maintenance-log.md
wiki/multivariate-polynomial/prompts/: compile-concept-page.md  compile-index.md  compile-source-page.md  lint-wiki.md  query-and-file.md
wiki/multivariate-polynomial/wiki/: api.md  classes.md  data-flow.md  index.md  structure.md
wiki/multivariate-polynomial/wiki/concepts/: coeff-indexing.md  dcei.md  sylvester.md
